--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -72,7 +72,7 @@
 <div class="row">
   <div class="bs-customizer-input">
     <label for="input-@font-family-sans-serif">@font-family-sans-serif</label>
-    <input id="input-@font-family-sans-serif" type="text" value="&quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif" data-var="@font-family-sans-serif" class="form-control"/>
+    <input id="input-@font-family-sans-serif" type="text" value="&quot;Gotham Pro Regular&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif" data-var="@font-family-sans-serif" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@font-family-serif">@font-family-serif</label>
@@ -594,6 +594,10 @@
   <div class="bs-customizer-input">
     <label for="input-@navbar-padding-vertical">@navbar-padding-vertical</label>
     <input id="input-@navbar-padding-vertical" type="text" value="((@navbar-height - @line-height-computed) / 2)" data-var="@navbar-padding-vertical" class="form-control"/>
+  </div>
+  <div class="bs-customizer-input">
+    <label for="input-@navbar-collapse-max-height">@navbar-collapse-max-height</label>
+    <input id="input-@navbar-collapse-max-height" type="text" value="340px" data-var="@navbar-collapse-max-height" class="form-control"/>
   </div>
   <div class="bs-customizer-input">
     <label for="input-@navbar-default-color">@navbar-default-color</label>
